test/sema/typeck/trait/generic-assoc-type-wrong-type-param-count.out
error: expected 1 type parameters but got 2.
--> generic-assoc-type-wrong-type-param-count.dora:8:5
 | 
 | impl Container for Foo {
 |     type Item[T, U] = (T, U);
       ~~~~~~~~~~~~~~~~~~~~~~~~~
 | }
 | 
1 error found.
