test/sema/typeck/trait/generic-assoc-type-wrong-type-param-count.dora
trait Container {
    type Item[T];
}

class Foo

impl Container for Foo {
    type Item[T, U] = (T, U);
}
